--- a/cg.html
+++ b/cg.html
@@ -114,6 +114,12 @@
             <button type="button" class="btn-info">Info</button>
             <button type="button" class="btn-success">Success</button>
 
+        <p>Buttons : Hover</p>                
+            <button type="button" class="btn-selectionned_primary">Primary</button>
+            <button type="button" class="btn-selectionned_warning">Warning</button>
+            <button type="button" class="btn-selectionned_info">Info</button>
+            <button type="button" class="btn-selectionned_success">Success</button>
+
         <p>Buttons - outline</p>
             <button type="button" class="btn-outline-primary">Primary</button>
             <button type="button" class="btn-outline-warning">Warning</button>
@@ -177,7 +183,37 @@
         <input type="text" id="lname" name="lastname" placeholder="Wrong value...">
         <div class="invalid-feedback">Sorry, that username's taken. Try another?</div>
         <br>
+<hr>
 
+<h1 id="super_title">Cards</h1>
+
+<!--
+<div class="cards">
+    <article class="card">
+        <img src="img.jpg" alt="Image">
+        <div class="title_card">Title of card</div>
+        <div class="create_card">
+            <p>Short content.</p>
+        </div>
+    </article>
+</div>
+-->
+
+<div class="flex-container">
+    <div class="flex-item">
+        <img class="picture" src="/IMG_4957 2.jpg" alt="">
+        <h5 class="home_title">Titre de l'item</h5>
+        <p class="description">Lorem ipsum elonor dielist tadum dolores de la ciudad.Lorem ipsum elonor dielist tadum dolores de la ciudad.</p>
+    </div>
+</div>
+
+<div class="flex-container">
+    <div class="flex-item-lg">
+        <img class="picture-lg" src="/IMG_4957 2.jpg" alt="">
+        <h5 class="home_title-lg">Titre de l'item</h5>
+        <p class="description-lg">Lorem ipsum elonor dielist tadum dolores de la ciudad.</p>
+    </div>
+</div>
 
 
 </body>
