--- a/cg.html
+++ b/cg.html
@@ -210,10 +210,30 @@
 <div class="flex-container">
     <div class="flex-item-lg">
         <img class="picture-lg" src="/IMG_4957 2.jpg" alt="">
-        <h5 class="home_title-lg">Titre de l'item</h5>
-        <p class="description-lg">Lorem ipsum elonor dielist tadum dolores de la ciudad.</p>
+        <h3 class="home_title">Titre de l'item</h3>
+        <p class="description">Lorem ipsum elonor dielist tadum dolores de la ciudad. 
+            Lorem ipsum elonor dielist tadum dolores de la ciudad.
+            Lorem ipsum elonor dielist tadum dolores de la ciudad. 
+            Lorem ipsum elonor dielist tadum dolores de la ciudad.
+        </p>
     </div>
 </div>
+
+<div class="flex-container">
+    <div class="flex-item">
+        <h5 class="home_title">Titre de l'item</h5>
+        <hr>
+        <p class="description">Lorem ipsum elonor dielist tadum dolores de la ciudad.Lorem ipsum elonor dielist tadum dolores de la ciudad.</p>
+    </div>
+</div>
+
+<div class="flex-container">
+    <div class="flex-item">
+        <img class="picture" src="/IMG_4957 2.jpg" alt="">
+        <h5 class="home_title">Titre de l'item</h5>
+    </div>
+</div>
+
 
 
 </body>
