--- a/cg.html
+++ b/cg.html
@@ -136,7 +136,7 @@
             <button type="button" class="btn-sm" id="small_primary8">SMALL</button>
             <button type="button" class="btn-sm" id="small_primary9">SMALL</button>
 
-        <p>Buttons- large</p>
+        <p>Buttons - large</p>
             <button type="button" class="btn-lg" id="long_info1">LARGE BUTTON</button>
             <button type="button" class="btn-lg" id="long_info2">LARGE BUTTON</button>
             <button type="button" class="btn-lg" id="long_info3">LARGE BUTTON</button>
@@ -146,8 +146,16 @@
             <button type="button" class="btn-lg" id="long_info7">LARGE BUTTON</button>
             <button type="button" class="btn-lg" id="long_info8">LARGE BUTTON</button>
 
+        <p>Buttons together</p> 
+            <button type="button" class="btn-sm" id="small_primary2">Small</button>               
+            <button type="button" class="btn-primary">Regular</button>
+            <button type="button" class="btn-lg" id="long_info1">Large button</button>
+            
         <p>Link</p>
-            <button type="button" class="btn-link"><a href="#">Link</a></button>
+        <a href="#" id="def">Default</a>
+        <a href="#" id="prim">Primary</a>
+        <a href="#" id="sec">Secondary</a>
+        <a href="#" id="gr">Shades of grey</a>
 
 <hr>
 
@@ -175,12 +183,12 @@
         <br>
 
         <h3>Valid / Invalid input</h3>
-        <label for="fname" >Valid input</label><br>
-        <input type="text" id="fname" name="firstname" placeholder="Correct value...">
+        <label for="vldinput" >Valid input</label><br>
+        <input type="text" id="vld" name="valid" placeholder="Correct value...">
         <div class="valid-feedback">Success! You've done it.</div>
         <br>
-        <label for="fname">Invalid input</label><br>
-        <input type="text" id="lname" name="lastname" placeholder="Wrong value...">
+        <label for="nvldinput">Invalid input</label><br>
+        <input type="text" id="nvld" name="invalid" placeholder="Wrong value...">
         <div class="invalid-feedback">Sorry, that username's taken. Try another?</div>
         <br>
 <hr>
