--- a/cg.html
+++ b/cg.html
@@ -191,6 +191,21 @@
         <input type="text" id="nvld" name="invalid" placeholder="Wrong value...">
         <div class="invalid-feedback">Sorry, that username's taken. Try another?</div>
         <br>
+
+
+        <h1 id="super_title">Other Components</h1>
+            <h2>Checkboxes</h2>
+
+                <label class="container">One
+                    <input type="checkbox" checked="checked">
+                    <span class="checkmark_empty"></span>
+                </label>
+
+                <label class="container">two
+                    <input type="checkbox" checked="checked">
+                    <span class="checkmark"></span>
+            </label>
+
 <hr>
 
 <h1 id="super_title">Cards</h1>
