small&long inputs

--- a/cg.html
+++ b/cg.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Lien vers fichier CSS -->
-    <link href="stylesheet.css" rel="stylesheet">
+    <link href="stylesheet.css"" rel="stylesheet">
     <!-- Paragraph Typography -->
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -192,16 +192,25 @@
         <div class="invalid-feedback">Sorry, that username's taken. Try another?</div>
         <br>
 
+        <h3>Small, Normal, Big Forms</h3>
+
+        <label for="fname" >Small Form</label><br>
+        <input type="text_sm" id="fname" name="firstname" placeholder="Write your name...">
+        <br>
+
+        <label for="fname" >Big Form</label><br>
+        <input type="text_lg" id="fname" name="firstname" placeholder="Write your name...">
+        <br>
 
         <h1 id="super_title">Other Components</h1>
             <h2>Checkboxes</h2>
 
-                <label class="container">One
+                <label class="container"><p>Tu peux rien me faire</p>
                     <input type="checkbox" checked="checked">
                     <span class="checkmark_empty"></span>
                 </label>
 
-                <label class="container">two
+                <label class="container"><p>Tu peux me valider</p>
                     <input type="checkbox" checked="checked">
                     <span class="checkmark"></span>
             </label>
@@ -224,7 +233,7 @@
 
 <div class="flex-container">
     <div class="flex-item">
-        <img class="picture" src="/IMG_4957 2.jpg" alt="">
+        <img class="picture" src="IMG_4957 2.jpg" alt="">
         <h5 class="home_title">Titre de l'item</h5>
         <p class="description">Lorem ipsum elonor dielist tadum dolores de la ciudad.Lorem ipsum elonor dielist tadum dolores de la ciudad.</p>
     </div>
@@ -232,7 +241,7 @@
 
 <div class="flex-container">
     <div class="flex-item-lg">
-        <img class="picture-lg" src="/IMG_4957 2.jpg" alt="">
+        <img class="picture-lg" src="IMG_4957 2.jpg" alt="">
         <h3 class="home_title">Titre de l'item</h3>
         <p class="description">Lorem ipsum elonor dielist tadum dolores de la ciudad. 
             Lorem ipsum elonor dielist tadum dolores de la ciudad.
@@ -252,7 +261,7 @@
 
 <div class="flex-container">
     <div class="flex-item">
-        <img class="picture" src="/IMG_4957 2.jpg" alt="">
+        <img class="picture" src="IMG_4957 2.jpg" alt="">
         <h5 class="home_title">Titre de l'item</h5>
     </div>
 </div>
