begin radio button

--- a/cg.html
+++ b/cg.html
@@ -198,38 +198,43 @@
         <input type="text_sm" id="fname" name="firstname" placeholder="Write your name...">
         <br>
 
+        <label for="fname" >Normal Form</label><br>
+        <input type="text" id="fname" name="firstname" placeholder="Write your name...">
+        <br>
+
         <label for="fname" >Big Form</label><br>
         <input type="text_lg" id="fname" name="firstname" placeholder="Write your name...">
         <br>
 
         <h1 id="super_title">Other Components</h1>
             <h2>Checkboxes</h2>
-
-                <label class="container"><p>Tu peux rien me faire</p>
-                    <input type="checkbox" checked="checked">
+                <label class="container">Tu peux rien me faire
+                    <input type="checkbox" disabled="checked">
                     <span class="checkmark_empty"></span>
                 </label>
 
                 <label class="container"><p>Tu peux me valider</p>
                     <input type="checkbox" checked="checked">
                     <span class="checkmark"></span>
-            </label>
+                </label>
+
+            <h2>Radio button</h2>
+                <label class="container_radio">One
+                    <input type="checkbox_radio" checked="checked">
+                    <span class="checkmark_radio"></span>
+                </label>
+                
+                <label class="container_radio">One
+                    <input type="checkbox_radio" checked="checked">
+                    <span class="checkmark_radio"></span>
+                </label>
+
+
+
 
 <hr>
 
 <h1 id="super_title">Cards</h1>
-
-<!--
-<div class="cards">
-    <article class="card">
-        <img src="img.jpg" alt="Image">
-        <div class="title_card">Title of card</div>
-        <div class="create_card">
-            <p>Short content.</p>
-        </div>
-    </article>
-</div>
--->
 
 <div class="flex-container">
     <div class="flex-item">
